--- a/src/app/platform/iol-dashboard/iol-dashboard.component.html
+++ b/src/app/platform/iol-dashboard/iol-dashboard.component.html
@@ -42,9 +42,13 @@
 
 
     <div class="row" *ngIf="graphsArray && graphsArray?.length > 0">
-      <div *ngFor="let graph of graphsArray; let i = index" [className]="graphColumns[i]">
-        <div style="height: 400px;" class="panel panel-default card light shadow margin-bottom-30"
+      <!-- TODO: Later this will add when Fuel Sensor added -->
+      <!-- <div *ngFor="let graph of graphsArray; let i = index" [className]="graphColumns[i]">
+        <div style="height: 400px;" class="panel panel-default card light shadow margin-bottom-30" -->
+      <ng-container *ngFor="let graph of graphsArray; let i = index">
+        <div style="height: 400px;" [className]="graphColumns[i]"
           *ngIf="graph?.type !== 9">
+          {{removeDiv(graph?.type)}}
           <div class="panel-heading">
             <h3 class="panel-title font-weight-600" [ngStyle]="theme">
               <span *ngIf="graph.name === 'Average Statistics'">
@@ -244,7 +248,8 @@
             </div>
           </div>
         </div>
-      </div>
+      </ng-container>
+
 
       <div class="col-md-8"
         *ngIf="largeGraph?.type === 9 && largeGraph?.is_selected && this.user?.package[0]?.package_id == this.packageType?.standard">
