--- a/src/app/platform/jobs/templateform/templateform.component.css
+++ b/src/app/platform/jobs/templateform/templateform.component.css
@@ -63,24 +63,24 @@
 
 
 span#content::before{
-  /* top: 50%;
-  left: 5px;
-  height: 14px; */
-  width: 14px;
-  /* margin-top: -9px;
-  display: block; */
-  position: absolute;
-  color: white;
-  border: 2px solid white;
-  border-radius: 14px;
-  box-shadow: 0 0 3px #444;
-  box-sizing: content-box;
-  text-align: center;
-  text-indent: 0 !important;
-  font-family: 'Courier New', Courier, monospace;
-  line-height: 14px;
-  content: '+';
-  background-color: #0275d8;
+   /* top: 50%;
+    left: 5px;
+    height: 14px; */
+    width: 14px;
+    /* margin-top: -9px;
+    display: block; */
+    position: absolute;
+    color: white;
+    border: 2px solid white;
+    border-radius: 14px;
+    box-shadow: 0 0 3px #444;
+    box-sizing: content-box;
+    text-align: center;
+    text-indent: 0 !important;
+    font-family: 'Courier New', Courier, monospace;
+    line-height: 14px;
+    content: '+';
+    background-color: #0275d8;
 }
 /* span#content{
   content: '-';
@@ -113,29 +113,29 @@ font-size: 12px !important;
 
 
 span#content::before{
-/* top: 50%;
-left: 5px;
-height: 14px; */
-width: 14px;
-/* margin-top: -9px;
-display: block; */
-position: absolute;
-color: white;
-border: 2px solid white;
-border-radius: 14px;
-box-shadow: 0 0 3px #444;
-box-sizing: content-box;
-text-align: center;
-text-indent: 0 !important;
-font-family: 'Courier New', Courier, monospace;
-line-height: 14px;
-content: '+';
-background-color: #0275d8;
+ /* top: 50%;
+    left: 5px;
+    height: 14px; */
+    width: 14px;
+    /* margin-top: -9px;
+    display: block; */
+    position: absolute;
+    color: white;
+    border: 2px solid white;
+    border-radius: 14px;
+    box-shadow: 0 0 3px #444;
+    box-sizing: content-box;
+    text-align: center;
+    text-indent: 0 !important;
+    font-family: 'Courier New', Courier, monospace;
+    line-height: 14px;
+    content: '+';
+    background-color: #0275d8;
 }
 
-.expanded span#content::before {
-content: '-' !important;
-background-color: #d33333;
+.example-expanded-row span#content::before {
+  content: '-' !important;
+  background-color: #d33333;
 }
 
 .file-upload-btn {
@@ -180,3 +180,18 @@ background-color: #d33333;
 /* .error-message{
   font-size: 13px !important;
 } */
+
+table {
+  width: 100%;
+}
+tr.example-detail-row {
+  height: 0;
+}
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
