--- a/src/app/platform/jobs/templateform/templateform.component.html
+++ b/src/app/platform/jobs/templateform/templateform.component.html
@@ -10,7 +10,7 @@
 
 <div
   [className]="sidebarCheck ? 'half-open-sidebar page-content  container-fluid' : 'full-open-sidebar page-content  container-fluid' "
-  [hidden]="!isAuthorized">
+  style="padding-bottom:200px" [hidden]="!isAuthorized">
   <!--  Modal Form-->
   <div class="modal fade  modal-success text-left" data-backdrop="static"
     (hide)="false;$event.preventDefault();$event.stopPropagation();" id="editpop1" role="dialog" tabindex="-1">
@@ -597,6 +597,7 @@
                                     <div class="dataTables_scroll">
                                       <div class="dataTables_scrollBody"
                                         style="position: relative; overflow: auto; max-height: 250px; height: 250px; width: 100%;">
+
                                         <table
                                           class="table nowrap margin-bottom-0 table-bordered  table-striped theme-table1  bg-white  table-condensed  text-wrap dataTable no-footer dtr-inline collapsed"
                                           id="ppp" role="grid" aria-describedby="ppp_info" style="width: 100%;">
@@ -791,13 +792,16 @@
                 <!-- (matSortChange)="sortUserList($event)" -->
                 <table matSort (matSortChange)="sortUserList($event)"
                   class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1" mat-table
-                  [dataSource]="templates" mat-elevation-z8>
+                  [dataSource]="templates" mat-elevation-z8 multiTemplateDataRows>
                   <ng-container matColumnDef="job_name" (click)=$event.stopPropagation()>
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                    <td mat-cell *matCellDef="let row" [cdkDetailRow]="row" [cdkDetailRowTpl]="tpl" matRipple>
+                    <!-- [cdkDetailRow]="row" [cdkDetailRowTpl]="tpl" matRipple -->
+
+
+                    <td mat-cell *matCellDef="let row">
                       <div style="float: left;position: relative;">
-                        <span style="float: left;margin-left: -10px!important;margin-top: 3px;" id="content"
-                          class=""></span>
+                        <span style="float: left;margin-left: -10px!important;margin-top: 3px;" id="content" class=""
+                          (click)="expandedElement = expandedElement === row ? null : row"></span>
                       </div>
                       <div class="padding-left-15">
                         {{(row.job_name == null) ? 'N/A': row.job_name}}
@@ -892,12 +896,49 @@
                       </button>
                     </td>
                   </ng-container>
+
+
+                  <ng-container matColumnDef="expandedDetail">
+                    <td mat-cell *matCellDef="let search" [attr.colspan]="displayedUserList.length"
+                      style="padding-left: 28px;padding-right: 8px;padding-top:0px;padding-bottom:0px">
+                      <div class="example-element-detail"
+                        [@detailExpand]="search === expandedElement ? 'expanded' : 'collapsed'">
+                        <div class="example-element-description">
+
+                          <div class="mat-row detail-row"
+                            style="display: flex; padding: 10px 0px 10px 50px; overflow: hidden;visibility: visible;">
+
+                            <div *ngFor="let item of search?.job_tasks" style="border-bottom: 1p solid inherit;">
+                              <div><b style="margin-left: 7px;">Pickup: </b>{{item?.source_address}}</div>
+                              <div><b style="margin-left: 7px;">Dropoff: </b>{{item?.destination_address}}</div>
+                              <div><b style="margin-left: 7px;">Status: </b><span
+                                  style="text-transform: lowercase;">{{getTaskProgress(item?.job_status)}}</span></div>
+                              <div *ngIf="item?.aborted_status"><b style="margin-left: 7px;">Aborted Reason:
+                                </b><span style="white-space: break-spaces;">{{item?.aborted_status}} :
+                                  {{item?.aborted_reason}}</span></div>
+                            </div>
+
+                            <div *ngIf="search?.job_tasks?.length===0" class="no-records"
+                              style=" padding: 10px 0px 10px 80px; overflow: hidden; margin-left: -62px;">
+                              There is no information to show
+                            </div>
+                          </div>
+
+                        </div>
+                      </div>
+                    </td>
+                  </ng-container>
+
+
                   <tr mat-header-row *matHeaderRowDef="displayedUserList"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedUserList;" class="element-row"></tr>
+                  <tr mat-row *matRowDef="let row; let i = index; columns: displayedUserList;"
+                    class="element-row example-element-row" [class.example-expanded-row]="expandedElement === row"></tr>
+                  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
                 </table>
 
 
-                <ng-template #tpl let-row>
+                <!-- <ng-template #tpl let-row>
                   <div class="mat-row detail-row" [@detailExpand]
                     style="overflow: hidden; margin-top:35px;margin-left: -88px;">
                     <div *ngFor="let item of row?.job_tasks" style="border-bottom: 1p solid inherit;">
@@ -912,7 +953,7 @@
 
 
                   </div>
-                </ng-template>
+                </ng-template> -->
 
                 <div *ngIf="templates?.length === 0 && !showIndeterminateProgress" class="no-records">No records found
                 </div>
