fixed Aggressively driven graph x axis issue

--- a/src/app/platform/maintenance/predictive-maintenance/predictive-maintenance.component.html
+++ b/src/app/platform/maintenance/predictive-maintenance/predictive-maintenance.component.html
@@ -227,7 +227,7 @@
                 </td>
               </ng-container>
               <ng-container matColumnDef="vehicle_name">
-                <th mat-header-cell *matHeaderCellDef>DRIVER</th>
+                <th mat-header-cell *matHeaderCellDef>VEHICLE</th>
                 <td mat-cell *matCellDef="let row">
                   {{row.vehicle_name}}
                 </td>
