--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -66,7 +66,7 @@
           <a title="Help" routerLink="help" id="no-hover"><i class="ion-ios-help-outline iconsize "></i></a>
         </li>
 
-        <li class="dropdown" >
+        <!-- <li class="dropdown" >
           <a data-toggle="dropdown" class="text-center">
             <div style="display: flex;">
               <div id="google_translate_element" style="position:absolute"></div>
@@ -74,7 +74,7 @@
             </div>
 
           </a>
-        </li>
+        </li> -->
 
 
 
