--- a/src/app/platform/admin-forms/admin-configurations/admin-configurations.component.html
+++ b/src/app/platform/admin-forms/admin-configurations/admin-configurations.component.html
@@ -207,7 +207,7 @@
                             </div>
                         </mat-tab>
 
-                        <mat-tab label="Fuel Threshold">
+                        <!-- <mat-tab label="Fuel Threshold">
                             <div class="tab-content padding-20">
                                 <div class="row">
                                     <div class="col-md-4"></div>
@@ -260,7 +260,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </mat-tab>
+                        </mat-tab> -->
 
                         <mat-tab label="Notification">
                             <div class="tab-content padding-20">
