--- a/src/app/platform/drivers/driver-shift-allocation/driver-shift-allocation.component.html
+++ b/src/app/platform/drivers/driver-shift-allocation/driver-shift-allocation.component.html
@@ -314,14 +314,14 @@
                   <ng-container matColumnDef="shift_start_time">
                     <th mat-header-cell *matHeaderCellDef>Start Time</th>
                     <td mat-cell *matCellDef="let row">
-                      {{ row.shift_start_time ? timeConversion(row.shift_start_time) : 'N/A' }}
+                      {{(row.start_date == null) ? 'N/A': row.start_date | date: 'hh:mm:ss a'}}
 
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="shift_end_time">
                     <th mat-header-cell *matHeaderCellDef>End Time</th>
                     <td mat-cell *matCellDef="let row">
-                      {{ row.shift_end_time ? timeConversion(row.shift_end_time) : 'N/A' }}
+                      {{(row.end_date == null) ? 'N/A': row.end_date | date: 'hh:mm:ss a'}}
                     </td>
                   </ng-container>
 
