--- a/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
+++ b/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
@@ -649,10 +649,11 @@
       </div>
     </div>
 
+    
     <div class="row" style="border-radius: 20px;" *ngIf="selectedPkg === PackageType.standard">
       <div class="col-lg-12">
         <div class="panel panel-default padding-0 round card shadow light" style="min-height: 200px;">
-
+          
           <div class="panel-body padding-0">
             <div class="tab-content">
               <div class="tab-pane active" id="Summary">
@@ -661,7 +662,7 @@
                     <div class="row margin-top-30">
                       <div class="col-lg-12">
 
-                        <mat-tab-group>
+                        <mat-tab-group (selectedTabChange)="getSelectedTab($event)">
 
                           <mat-tab label="Last Job Summary">
                             <div *ngIf="jobSummary;else noTask;">
@@ -969,6 +970,7 @@
                             </ng-template>
                           </mat-tab>
 
+                          
                           <mat-tab label="Map Trail">
                             <div class="row margin-top-10">
                               <app-reporting-buttons [calendarDimension]="'col-sm-6'" [type]="'trail'"
@@ -1067,6 +1069,7 @@
                                   <app-google-map #trailMap [height]="'550px'" [markers]="violationMarkers"
                                     [infowindow]="violationInfoWindows">
                                   </app-google-map>
+                                  <!-- <div id="map" class="map"></div> -->
                                 </div>
 
                               </div>
