--- a/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
+++ b/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
@@ -982,7 +982,7 @@
                             <div class="row margin-top-10">
                               <app-reporting-buttons [calendarDimension]="'col-sm-6'" [type]="'trail'"
                                 [timeRange]="true" [hideBtn]="'today yesterday week month'"
-                                (btnClicked)="setupReport($event)">
+                                (btnClicked)="setupReport($event)" [makeDisable]="trailLoader">
                               </app-reporting-buttons>
                               <div class="col-lg-3">
                                 <div class="inline-block">
@@ -1073,11 +1073,13 @@
                                 </div>
                                 <div class="margin-bottom-0"
                                   [ngClass]="showMarkersForTrail && trailWithStopsInfo.length? 'col-lg-9' : '' ">
-                                  <!-- <app-google-map #trailMap [height]="'550px'" [markers]="violationMarkers"
+                                  <app-google-map #trailMap [height]="'550px'" [markers]="violationMarkers"
                                     [infowindow]="violationInfoWindows">
-                                  </app-google-map> -->
-                                  <div id="map" class="map"></div>
-                                  <div id="mouse-position"></div>
+                                  </app-google-map>
+                                  <app-spin-loading [appLoader]="trailLoader"></app-spin-loading>
+
+                                  <!-- <div id="map" class="map"></div>
+                                  <div id="mouse-position"></div> -->
                                 </div>
 
                               </div>
