--- a/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
+++ b/src/app/platform/fleets/fleet-detail/fleet-detail.component.html
@@ -1072,10 +1072,10 @@
                                 </div>
                                 <div class="margin-bottom-0"
                                   [ngClass]="showMarkersForTrail && trailWithStopsInfo.length? 'col-lg-9' : '' ">
-                                  <app-google-map #trailMap [height]="'550px'" [markers]="violationMarkers"
+                                  <!-- <app-google-map #trailMap [height]="'550px'" [markers]="violationMarkers"
                                     [infowindow]="violationInfoWindows">
-                                  </app-google-map>
-                                  <!-- <div id="map" class="map"></div> -->
+                                  </app-google-map> -->
+                                  <div id="map" class="map"></div>
                                   <app-spin-loading [appLoader]="trailLoader"></app-spin-loading>
 
                                 </div>
